Add debugging statements

--- a/.drone.yml
+++ b/.drone.yml
@@ -1406,9 +1406,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="amd64" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -1533,9 +1538,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="amd64" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -1663,9 +1673,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="amd64" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -1702,7 +1717,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:401
 ################################################
 
 kind: pipeline
@@ -1813,9 +1828,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="amd64" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -1857,7 +1877,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:401
 ################################################
 
 kind: pipeline
@@ -1965,9 +1985,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="amd64" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -2009,7 +2034,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:401
 ################################################
 
 kind: pipeline
@@ -2111,9 +2136,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="amd64" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -2150,7 +2180,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:401
 ################################################
 
 kind: pipeline
@@ -2249,9 +2279,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="amd64" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -2376,9 +2411,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="386" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -2415,7 +2455,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:401
 ################################################
 
 kind: pipeline
@@ -2526,9 +2566,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="386" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -2570,7 +2615,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:401
 ################################################
 
 kind: pipeline
@@ -2672,9 +2717,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="386" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -3178,9 +3228,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="arm" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -3305,9 +3360,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="arm64" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -3344,7 +3404,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:401
 ################################################
 
 kind: pipeline
@@ -3446,9 +3506,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="arm64" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -3485,7 +3550,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:401
 ################################################
 
 kind: pipeline
@@ -3587,9 +3652,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="arm" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -3626,7 +3696,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:401
 ################################################
 
 kind: pipeline
@@ -3737,9 +3807,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="arm64" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -3781,7 +3856,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:401
 ################################################
 
 kind: pipeline
@@ -3892,9 +3967,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="linux" -F arch="arm" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -4027,9 +4107,14 @@ steps:
   - |-
     cd /go/artifacts
     for file in $(find . -type f ! -iname '*.sha256'); do
+      echo "file: $file" # debug
       product="$(basename "$file" | sed -E 's/(-|_)v?[0-9].*//')" # extract part before -vX.Y.Z
+      echo "product: $product" # debug
       shasum="$(cat "$file.sha256" | cut -d ' ' -f 1)"
+      echo "shasum: $shasum" # debug
       status_code=$(curl $CREDENTIALS -s -o /tmp/curl_out.txt -w "%{http_code}" -F product=$product -F version=$VERSION -F notesMd="# Teleport $VERSION" -F status=draft $RELEASES_HOST/releases)
+      echo: "status_code: $status_code" # debug
+      cat /tmp/curl.out.txt # debug
       [ $status_code = 200 ] || [ $status_code = 409 ] || (echo "curl HTTP status: $status_code"; cat /tmp/curl_out.txt)
       curl $CREDENTIALS -s -F description="TODO" -F os="windows" -F arch="amd64" -F file=@$file -F sha256="$shasum" -F releaseId="$product@$VERSION" $RELEASES_HOST/assets;
     done
@@ -4801,6 +4886,6 @@ volumes:
       name: drone-s3-debrepo-pvc
 ---
 kind: signature
-hmac: bbfa6f8186e6936d31ef554c3351dbfb78431638722c49bf22db949d542e6fb5
+hmac: 50dfb505c2b1268bf43e8b91848fe19371e723eda458ead34294a1a7b0d0f29a
 
 ...
